--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,33 @@
 services:
+  database:
+    image: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data/pgdata
+      DB: ${DATABASE_NAME}
+    ports:
+      - "${DATABASE_PORT}"
+    volumes:
+      - auth-service-database-data:/var/lib/postgresql/data
+      - ./scripts:/docker-entrypoint-initdb.d
   server:
-    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile.dev
+    depends_on:
+      - database
+    environment:
+      DATABASE_HOST: database
+      DATABASE_PORT: ${DATABASE_PORT}
+      DATABASE_USERNAME: ${POSTGRES_USER}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_NAME: ${DATABASE_NAME}
     ports:
-      - 3000:3000
+      - "${APP_PORT}:3000"
     volumes:
       - .:/app
-      - node_modules:/app/node_modules
+      - auth-service-node_modules:/app/node_modules
 volumes:
-  node_modules: {}
+  auth-service-node_modules: {}
+  auth-service-database-data: {}
