--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      PGDATA: /var/lib/postgresql/data/pgdata
       DB: ${DATABASE_NAME}
     ports:
       - "${DATABASE_PORT}"
@@ -26,8 +25,8 @@ services:
     ports:
       - "${APP_PORT}:3000"
     volumes:
-      - .:/app
-      - auth-service-node_modules:/app/node_modules
+      - ".:/app"
+      - "/app/node_modules"
+      - "/app/dist"
 volumes:
-  auth-service-node_modules: {}
   auth-service-database-data: {}
