--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/microservices": "^7.6.11",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/microservices": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "kafkajs": "^1.15.0",
     "pg": "^8.5.1",
@@ -50,6 +50,7 @@
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
@@ -57,8 +58,7 @@
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5",
-    "husky": "^6.0.0"
+    "typescript": "^4.0.5"
   },
   "jest": {
     "moduleFileExtensions": [
