--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start:prod": "node dist/main",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "yarn typeorm migration:generate -n",
-    "typeorm:migration:run": "npm run typeorm migration:run",
+    "typeorm:migration:run": "yarn typeorm migration:run",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
