feat(refactor): Refactor connection to microservices.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME="auth_service"
-APP_PORT="3000"
-DATABASE_NAME="auth_service"
+APP_NAME="user_service"
+APP_PORT="3002"
+DATABASE_NAME="user_service"
 DATABASE_PORT="5432"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="1234"
