--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -16,7 +17,7 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "yarn typeorm migration:generate -n",
     "typeorm:migration:run": "yarn typeorm migration:run",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "seed": "node ./tools/scripts/seed/seed-auth-user",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
