feat: Create kafka producer connection.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "yarn typeorm migration:generate -n",
     "typeorm:migration:run": "yarn typeorm migration:run",
-    "seed": "node ./tools/scripts/seed/seed-auth-user",
+    "database-seed": "node ./tools/scripts/database-seed/seed-auth-user",
+    "kafka-seed": "node ./tools/scripts/kafka-seed/data",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
